--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"nodemon": "^2.0.19",
 		"prettier": "^2.7.1"
+	},
+	"dependencies": {
+		"country-state-city": "^3.1.2"
 	}
 }
