--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "cookie-parser": "^1.4.6",
     "country-state-city": "^3.1.2",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "mongoose": "^7.0.3",
+    "mongoose-autopopulate": "^1.0.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   }
