--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,30 @@
 services:
   api:
     image: letsgo-api
-    build: .
+    build:
+      context: backend
+      dockerfile: Dockerfile
     depends_on:
       - mongodb
     ports:
       - '3000:3000'
     volumes:
-      - ./src:/app/src
+      - ./backend/src:/app/src
+    env_file:
+      - backend/.env
     environment:
       - MONGODB_CONNECTION_STRING=mongodb://mongodb:27017/letsgo
+
+  frontend:
+    image: letsgo-frontend
+    build:
+      context: frontend
+      dockerfile: Dockerfile
+    ports:
+      - 5173:5173
+    volumes:
+      - ./frontend/src:/app/src
+      - ./frontend/public:/app/public
 
   mongodb:
     image: mongo
@@ -18,11 +33,11 @@ services:
     volumes:
       - ./data:/data/db
 
-  tests:
-    image: letsgo-api
-    command: node src/test.js
-    build: .
-    depends_on:
-      - api
-    volumes:
-      - ./src/test.js:/app/src/test.js
+  # tests:
+  #   image: letsgo-api
+  #   command: node src/test.js
+  #   build: .
+  #   depends_on:
+  #     - api
+  #   volumes:
+  #     - ./backend/src/test.js:/app/src/test.js
