--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - ./backend/src:/app/src
     env_file:
       - backend/.env
-    environment:
-      - MONGODB_CONNECTION_STRING=mongodb://mongodb:27017/letsgo
+    # environment:
+    # - MONGODB_CONNECTION_STRING=mongodb://mongodb:27017/letsgo
 
   frontend:
     image: letsgo-frontend
