--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue-next": "^0.8.8",
     "pinia": "^2.0.32",
     "pug": "^3.0.2",
     "sass": "^1.62.0",
@@ -28,6 +30,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "prettier": "^2.8.4",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
   }
