--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "bootstrap-select": "^1.13.18",
     "bootstrap-vue-next": "^0.8.8",
+    "country-state-city": "^3.1.4",
     "pinia": "^2.0.32",
     "pug": "^3.0.2",
     "sass": "^1.62.0",
