--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "mongoose": "^7.0.3",
     "mongoose-autopopulate": "^1.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "openai": "^3.2.1",
     "passport": "^0.6.0",
     "passport-local-mongoose": "^8.0.0",
